--- a/project_page2.html
+++ b/project_page2.html
@@ -58,12 +58,12 @@
                     full-stack
                     to cybersecurity and everything in between.</p>
                 <form action="" class="lp_form">
-                    <input type="text" name="" id="" placeholder="Please type your name" class="form_input">
-                    <input type="email" name="" id="" placeholder=" Please type your email" class="form_input">
+                    <input type="text" name="" id="" placeholder="Name" class="form_input">
+                    <input type="email" name="" id="" placeholder="Email" class="form_input">
                     <input type="submit" value="Submit" class="form_submit">
                 </form>
                 <div class="social_section">
-                    <h4>Follow me on Social Media</h4>
+                    <h5>Follow me on Social Media</h5>
                     <div class="social_icons">
                         <img src="images/fb_icon.png" alt="">
                         <img src="images/insta_icon.png" alt="">
