project 4 bootstrap mobile

--- a/project2.html
+++ b/project2.html
@@ -8,27 +8,23 @@
     <link rel="stylesheet" href="project2_styles.css">
 </head>
 
-<body id="project2_body">
-    <div>
-        <button class="back_btn"><a href="project_page2.html">Go Back to Project Page</a></button>
-    </div>
-    <div class="container cntr_margin">
+<body>
+    <div class="coding_bg">
         <div class="contrast_layer"></div>
         <div class="content">
-            <h2 class="lp_content">Come join our coding bootcamp!</h2>
-            <p class="lp_content">Learn the latest coding skills with our wide range of course options, from full-stack
-                to cybersecurity and everything in between.</p>
-            <form action="" class="lp_form">
-                <input type="text" name="" id="" placeholder="Name" class="form_input">
-                <input type="email" name="" id="" placeholder="Email" class="form_input">
-                <input type="submit" value="Submit" class="form_submit">
+            <h2 class="text">Come join our coding bootcamp!</h2>
+            <p class="text">Learn the latest coding skills with our wide range of course options, from full-stack to cybersecurity and everything in between.</p>
+            <form action="" class="form">
+                <input type="text" name="" id="" placeholder="Name" class="input">
+                <input type="email" name="" id="" placeholder="Email" class="input">
+                <input type="submit" value="Submit" class="submit">
             </form>
             <div class="social_section">
                 <h4>Follow us on social media!</h4>
                 <div class="social_icons">
-                    <img src="/images/fb_icon.png" alt="">
-                    <img src="/images/insta_icon.png" alt="">
-                    <img src="/images/tik_icon.png" alt="">
+                    <img src="images/fb_icon.png" alt="">
+                    <img src="images/insta_icon.png" alt="">
+                    <img src="images/tik_icon.png" alt="">
                 </div>
             </div>
         </div>
