--- a/project_page2.html
+++ b/project_page2.html
@@ -35,7 +35,7 @@
                     <p class=" header_text"">A sign up for a coding course with a tech feel.</p>
             </div>
             <div>
-                <button class="btn_styling">Download the project file</button>
+                <button class="btn_styling">Download the project file<button>
                 <button class="btn_styling"><a href="project2.html">View the project page</a></button>
             </div>
         </div>
@@ -49,19 +49,19 @@
         </div>
     </section>
 
-    <section class="gray_bg">
-        <div class="coding_bg container ">
-            <div class="project_contrast_layer"></div>
-            <div class="content">
-                <h2 class="lp_content">Come join our coding bootcamp!</h2>
-                <p class="lp_content">Learn the latest coding skills with our wide range of course options, from
+    <section class="gray_bg graybg_project">
+        <div class="coding_bg codingbg_project">
+            <div class="contrast_layer contrast_layer_project "></div>
+            <div class="content content_project">
+                <h2 class="text project_text">Come join our coding bootcamp!</h2>
+                <p class="text project_text">Learn the latest coding skills with our wide range of course options, from
                     full-stack
                     to cybersecurity and everything in between.</p>
-                <form action="" class="lp_form">
-                    <input type="text" name="" id="" placeholder="Name" class="form_input">
-                    <input type="email" name="" id="" placeholder="Email" class="form_input">
-                    <input type="submit" value="Submit" class="form_submit">
-                </form>
+                <form action="" class="form form_project">
+                    <input type="text" name="" id="" placeholder="Name" class="input input_project">
+                    <input type="email" name="" id="" placeholder="Email" class="input input_project">
+                    <input type="submit" value="Submit" class="submit submit_project">
+                </form> 
                 <div class="social_section">
                     <h5>Follow me on Social Media</h5>
                     <div class="social_icons">
