--- a/project_page4.html
+++ b/project_page4.html
@@ -41,12 +41,12 @@
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <p class="hero_header"">Summer Basketball League Login</p>
-                    <p class="header_text"">A simple and clean login page for a summer basketball league.</p>
+                <p class="hero_header"">Online Currency Exchange Login</p>
+                    <p class="header_text"">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div>
                 <button class="btn_styling">Download the project file</button>
-                <button class="btn_styling"><a href="project1.html">View the project page</a></button>
+                <button class="btn_styling"><a href="project4.html">View the project page</a></button>
             </div>
         </div>
     </section>
@@ -61,22 +61,7 @@
 
     <section id="project1_section">
         <div class="project1_container">
-            <div class="project_sideimg"></div>
-            <div class="project_login">
-                <h2>Login to the Summer League!</h2>
-
-                <div class="project_form">
-                    <input type="email" placeholder="Email" class="credentials">
-
-                    <input type="password" placeholder="Password" class="credentials" id="passwrd">
-
-                    <input type="submit" value="Enter" id="submit">
-                </div>
-                <div class="project_help">
-                    <a href="">New User? Create an account.</a>
-                    <a href="">Forgot password?</a>
-                </div>
-            </div>
+            
         </div>
 
 
