--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simcha Lapp Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,21 +16,28 @@
 </head>
 
 <body id="home">
-
-    <header id="header_section">
-        <div class="header_container vast-shadow-regular">
-            <p class="logo vast-shadow-regular">Simcha Lapp</p>
-            <nav class="nav">
-                <ul>
-                    <li><a href="#home">HOME</a></li>
-                    <li><a href="#my_projects">MY PROJECTS</a></li>
-                    <li><a href="#contact_section">CONTACT</a></li>
-                    <li></li>
+    <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
+        <div class="container px-5">
+            <a class="navbar-brand fs-4 p-0" href="#">Simcha Lapp</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="px-3 navbar-collapse text-center" id="navbarNav">
+                <ul class="navbar-nav gap-2">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#my_projects">My Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact_section">Contact</a>
+                    </li>
                 </ul>
-                <img src="images/hamburger_icon.png" alt="">
-            </nav>
+            </div>
         </div>
-    </header>
+    </nav>
 
     <section id="hero_section">
         <div class="hero_box">
@@ -70,7 +79,8 @@
                     ipsam est delectus. Voluptas, repudiandae a! Labore delectus nulla aperiam natus dolor maiores modi
                     sed temporibus, ab laboriosam. Quos cum, reprehenderit similique perferendis sint, alias eius
                     temporibus saepe mollitia vero adipisci nisi impedit, odio pariatur. Neque, amet!</p>
-                <button class="btn_styling" id="resume">Download my resume</button>
+                <button class="btn_styling"><a href="Resume.pdf" download="Simcha Lapp Resume">Download my
+                        resume</a></button>
             </div>
             <img src="images/profile pic.jpg" alt="" class="aboutMe_img">
         </div>
@@ -79,24 +89,22 @@
     <section id="my_projects" class="project_section">
         <h2 class="section_header">My Projects</h2>
         <div class="project_card_area">
-            <div class="project_card" id="project_card1">
+            <div class="project_card">
                 <div class="project_card_img"><img src="images/basketball.jpg" alt=""></div>
 
                 <div class="project_card_text">
                     <h3 class="project_card_title">Basketball League Login Page</h3>
-                    <p> A youthful and fun login page for a summer basketball league.
-                        <p />
-                        <button class="btn_styling"><a href="project_page1.html">Project Page</a></button>
+                    <p> A youthful and fun login page for a summer basketball league.Built with HTML and CSS.</p>
+                    <button class="btn_styling"><a href="project_page1.html">Project Page</a></button>
                 </div>
             </div>
 
-            <div class="project_card" id="project_card2">
+            <div class="project_card">
                 <div class="project_card_img"><img src="images/coding_background.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Coding Course Sign Up</h3>
-                    <p>A sign up page for a new and exciting coding bootcamp.
-                        <p />
-                        <button class="btn_styling"><a href="project_page2.html">Project Page</a></button>
+                    <p>A sign up page for a new and exciting coding bootcamp. Built with HTML and CSS.</p>
+                    <button class="btn_styling"><a href="project_page2.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -104,7 +112,7 @@
                 <div class="project_card_img cardimg3"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Zoo Newsletter</h3>
-                    <p>An interesting and outdoorsy newsletter sign up for a zoo</p>
+                    <p>An interesting and outdoorsy newsletter sign up for a zoo. Built with HTML and CSS.</p>
                     <button class="btn_styling"><a href="project_page3.html">Project Page</a></button>
                 </div>
             </div>
@@ -113,8 +121,9 @@
                 <div class="project_card_img cardimg4"><img src="images/money1.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Currency Exchange</h3>
-                    <p>Modern and clean sign in for an online currrency exchange.</p>
-                    <button class="btn_styling"><a href="project4.html">Project Page</a></button>
+                    <p>Modern and clean sign in for an online currrency exchange. Built with HTML, CSS, and Bootstrap.
+                    </p>
+                    <button class="btn_styling"><a href="project_page4.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -172,9 +181,9 @@
                     <div><img src="images/phone_icon.png" alt=""></div>
                     <p>058-434-5797</p>
                 </div>
-                <div class="footer_items">
+                <div class="footer_items linked_in">
                     <div><img src="images/linkedin_icon.png" alt=""></div>
-                    <p>www.linkedin.com/in/simcha-lapp-0b4081106</p>
+                    <p>www.linkedin.com/in/<br>simcha-lapp-0b4081106</p>
                 </div>
             </div>
         </div>
@@ -184,6 +193,9 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
