--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                 <div class="project_card_text">
                     <h3 class="project_card_title">Basketball League Login Page</h3>
-                    <p> A youthful and fun login page for a summer basketball league.Built with HTML and CSS.</p>
+                    <p> A youthful and fun login page for a summer basketball league. Built with HTML and CSS.</p>
                     <button class="btn_styling"><a href="project_page1.html">Project Page</a></button>
                 </div>
             </div>
@@ -128,12 +128,12 @@
             </div>
 
             <div class="project_card" id="project_card5">
-                <div class="project_card_img"><img src="images/s_logo.jpg" alt=""></div>
+                <div class="project_card_img"><img src="images/box_icon.png" alt="" height="50px"></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Project 5</h3>
+                    <h3 class="project_card_title">Option 7</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                         <p />
-                        <button class="btn_styling"><a href="project_page3.html">Project Page</a></button>
+                        <button class="btn_styling"><a href="project5.html">Project Page</a></button>
                 </div>
             </div>
 
