--- a/project_page1.html
+++ b/project_page1.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
         <div class="container px-5">
-            <a class="navbar-brand fs-4 p-0" href="#">Simcha Lapp</a>
+            <a class="navbar-brand fs-4 p-0" href="index.html">Simcha Lapp</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
