--- a/project_page2.html
+++ b/project_page2.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
@@ -14,18 +16,28 @@
 
 <body>
     <header id="header_section">
-        <div class="header_container">
-            <p class="logo">Simcha Lapp</p>
-            <nav class="nav">
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="#my_projects">MY PROJECTS</a></li>
-                    <li><a href="#contact_section">CONTACT</a></li>
-                    <li></li>
-                </ul>
-                <img src="images/hamburger_icon.png" alt="">
-            </nav>
-        </div>
+        <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
+            <div class="container px-5">
+                <a class="navbar-brand fs-4 p-0" href="index.html">Simcha Lapp</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav gap-2">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#my_projects">My Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact_section">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
 
     <section id="hero_section" class="project_text">
@@ -49,9 +61,9 @@
         </div>
     </section>
 
-    <section class="gray_bg graybg_project">
-        <div class="coding_bg codingbg_project">
-            <div class="contrast_layer contrast_layer_project "></div>
+    <section class="graybg_project">
+        <div class="codingbg_project">
+            <div class="contrast_layer_project "></div>
             <div class="content content_project">
                 <h2 class="text project_text">Come join our coding bootcamp!</h2>
                 <p class="text project_text">Learn the latest coding skills with our wide range of course options, from
@@ -63,7 +75,7 @@
                     <input type="submit" value="Submit" class="submit submit_project">
                 </form> 
                 <div class="social_section">
-                    <h5>Follow me on Social Media</h5>
+                    <h3>Follow Us!</h3>
                     <div class="social_icons">
                         <img src="images/fb_icon.png" alt="">
                         <img src="images/insta_icon.png" alt="">
@@ -98,6 +110,10 @@
             <p>All Rights Reserved</p>
         </div>
     </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
