--- a/project5.html
+++ b/project5.html
@@ -13,8 +13,8 @@
 
 <body class=>
     <div class="container-fluid">
-        <div class="row header_box gap-5 position-relative">
-            <div class="d-flex align-items-center justify-content-center whatsapp_icon position-absolute bg-white">
+        <div class="row header_box gap-md-5 position-relative d-sm-flex flex-column-reverse p-sm-3">
+            <div class="d-flex align-items-center justify-content-center whatsapp_icon position-absolute">
                 <img src="images/whatsapp_icon.png" height="50px" alt="whatsapp icon">
             </div>
             <div class="col-md-7 d-flex flex-column align-items-end text-end my-auto fw-bold">
@@ -24,15 +24,14 @@
                     איפסום דולור
                     סיט אמט, קוואזי במר מודוף.</p>
             </div>
-            <div class="col-md-4 my-auto">
-                <img src="images/box_icon.png" alt="box" class="mx-5 box_icon">
+            <div class="col-md-3 d-flex mt-5 my-md-auto pt-sm-5 justify-content-md-start justify-content-end">
+                <img src="images/box_icon.png" alt="box" class="box_icon">
             </div>
         </div>
 
         <div class="row cards_box text-center m-3">
-            <div class="col-md-3 col-sm-12 mb-sm-3">
-                <div
-                    class="d-flex flex-column align-items-center justify-content-center gap-3 p-4 bg-dark bg-opacity-10">
+            <div class="col-md-3 col-sm-12">
+                <div class="card d-flex flex-column align-items-center justify-content-center gap-3 p-4 bg-dark bg-opacity-10">
                     <img src="images/box_icon.png" alt="" height="40px">
                     <h3>כותרת אזור</h3>
                     <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.</p>
@@ -41,7 +40,7 @@
 
             <div class="col-md-3 col-sm-12">
                 <div
-                    class="d-flex flex-column align-items-center justify-content-center gap-3 p-4 bg-dark bg-opacity-10 mb-sm-3">
+                    class="card d-flex flex-column align-items-center justify-content-center gap-3 p-4 bg-dark bg-opacity-10 mb-sm-3">
                     <img src="images/box_icon.png" alt="" height="40px">
                     <h3>כותרת אזור</h3>
                     <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.</p>
@@ -50,7 +49,7 @@
 
             <div class="col-md-3 col-sm-12">
                 <div
-                    class="d-flex flex-column align-items-center justify-content-center gap-3 p-4 bg-dark bg-opacity-10 mb-sm-3">
+                    class="card d-flex flex-column align-items-center justify-content-center gap-3 p-4 bg-dark bg-opacity-10 mb-sm-3">
                     <img src="images/box_icon.png" alt="" height="40px">
                     <h3>כותרת אזור</h3>
                     <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.</p>
@@ -59,7 +58,7 @@
 
             <div class="col-md-3 col-sm-12">
                 <div
-                    class="d-flex flex-column align-items-center justify-content-center gap-3 p-4 bg-dark bg-opacity-10 mb-sm-3">
+                    class="card d-flex flex-column align-items-center justify-content-center gap-3 p-4 bg-dark bg-opacity-10 mb-sm-3">
                     <img src="images/box_icon.png" alt="" height="40px">
                     <h3>כותרת אזור</h3>
                     <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.</p>
@@ -70,7 +69,7 @@
         <div class="row main_box">
             <div class="col-md-5 col-sm-12 form d-flex justify-content-center align-items-center">
                 <div class="d-flex flex-column mx-auto w-75 text-end my-5">
-                    <h2>הקופון עלינו</h2>
+                    <h2 class="fw-bolder">הקופון עלינו</h2>
                     <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.</p>
 
                     <label for="fullName">שם מלא</label>
@@ -79,51 +78,45 @@
                     <label for="email">דוא"ל</label>
                     <input type="email" name="email" id="email" class="input w-100 mb-3">
 
-                    <label for="Name">שם מלא</label>
-                    <textarea name="" id="" class="input w-100" cols="5" rows="10"></textarea>
+                    <label for="textarea">הודעה</label>
+                    <textarea rows="5" cols="20" name="textarea" id="textarea" class="input" ></textarea>
 
-                    <input type="submit" value="שליחה" class="submit w-100 mt-3">
+                    <input type="submit" value="שליחה" class="submit w-100 mt-3 fw-bolder">
                 </div>
             </div>
 
             <div
-                class="col-md-7 col-sm-12 mb-sm-2 py-3 map d-flex align-items-center justify-content-center flex-grow-1">
+                class="col-md-7 col-sm-12 py-5 map d-flex align-items-center justify-content-center">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3380.4286393134025!2d34.798380811340856!3d32.084699073852036!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502d74852e9c0d3%3A0xc3222ac206df6413!2zSGFja2VyVSB8INeU15DXp9eo15nXlSAtINeUJ9eX157XnteUJyDXnNeU15vXqdeo16og15PXldeoINeU16LXqteZ15Mg16nXnCDXqtei16nXmdeZ16og15TXlNeZ15nXmNen!5e0!3m2!1sen!2sil!4v1726958357360!5m2!1sen!2sil"
                     width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
-    </div>
 
-    <div class="row social_box">
-        <div class="col d-flex justify-content-center">
-            <div class="icons d-flex align-items-center justify-content-center">
-                <img src="images/fb_icon.png" alt="" height="50px">
+        <div class="row">
+            <div class="col social_box d-flex justify-content-center align-items-center gap-4">
+                <div class="icons d-flex align-items-center justify-content-center">
+                    <a href="https://www.facebook.com" target="_blank"><img src="images/fb2_icon.png" alt="facebook icon"
+                            height="40px"></a>
+                </div>
+                <div class="icons d-flex align-items-center justify-content-center">
+                    <a href="https://www.instagram.com" target="_blank"><img src="images/insta_icon.png" alt="instagram icon"
+                            height="40px"></a>
+                </div>
+                <div class="icons d-flex align-items-center justify-content-center">
+                    <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin2_icon.png" alt="linkedin icon"
+                            height="50px"></a>
+                </div>
+                <div class="icons d-flex align-items-center justify-content-center">
+                    <a href=""><img src="images/phone_icon.png" alt="phone icon" height="40px"></a>
+                </div>
             </div>
-        </div>
-
-        <div class="col d-flex justify-content-center">
-            <div class="icons d-flex align-items-center justify-content-center">
-                <img src="images/fb_icon.png" alt="" height="50px">
-            </div>
-        </div>
-
-        <div class="col d-flex justify-content-center">
-            <div class="icons d-flex align-items-center justify-content-center">
-                <img src="images/fb_icon.png" alt="" height="50px">
-            </div>
-        </div>
-
-        <div class="col d-flex justify-content-center">
-            <div class="icons d-flex align-items-center justify-content-center">
-                <img src="images/fb_icon.png" alt="" height="50px">
-            </div>
+            <div class="bottom_border"></div>
         </div>
     </div>
 
-    <div class="row bottom_border"></div>
-    </div>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
