responsives across projects and screenshots

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <h3 class="project_card_title">Option 7</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                         <p />
-                        <button class="btn_styling"><a href="project5.html">Project Page</a></button>
+                        <button class="btn_styling"><a href="project_page5.html">Project Page</a></button>
                 </div>
             </div>
 
