--- a/project_page2.html
+++ b/project_page2.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="project2_styles.css">
+    <link rel="stylesheet" href="project1_style.css">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
                 <p class="hero_header"">Coding Course Sign Up</p>
                     <p class=" header_text"">A sign up for a coding course with a tech feel.</p>
             </div>
-            <div>
+            <div class="hero_buttons">
                 <button class="btn_styling">Download the project file<button>
                 <button class="btn_styling"><a href="project2.html">View the project page</a></button>
             </div>
@@ -61,32 +61,11 @@
         </div>
     </section>
 
-    <section class="graybg_project">
-        <div class="codingbg_project">
-            <div class="contrast_layer_project "></div>
-            <div class="content content_project">
-                <h2 class="text project_text">Come join our coding bootcamp!</h2>
-                <p class="text project_text">Learn the latest coding skills with our wide range of course options, from
-                    full-stack
-                    to cybersecurity and everything in between.</p>
-                <form action="" class="form form_project">
-                    <input type="text" name="" id="" placeholder="Name" class="input input_project">
-                    <input type="email" name="" id="" placeholder="Email" class="input input_project">
-                    <input type="submit" value="Submit" class="submit submit_project">
-                </form> 
-                <div class="social_section">
-                    <h3>Follow Us!</h3>
-                    <div class="social_icons">
-                        <img src="images/fb_icon.png" alt="">
-                        <img src="images/insta_icon.png" alt="">
-                        <img src="images/tik_icon.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
 
-
+    <section id="project1_section">
+        <img src="images/project2_snip.png" alt="project 2 screenshot" class="screenshot">
     </section>
+    
 
     <footer>
         <div class="footer_container">
