--- a/project_page3.html
+++ b/project_page3.html
@@ -50,7 +50,7 @@
                 <p class="hero_header"">Zoo Newsletter Sign Up</p>
                     <p class=" header_text">Fun and interesting newsletter sign up for a zoo.</p>
             </div>
-            <div>
+            <div class="hero_buttons">
                 <button class="btn_styling">Download the project file</button>
                 <button class="btn_styling"><a href="project3.html">View the project page</a></button>
             </div>
