--- a/project_page4.html
+++ b/project_page4.html
@@ -44,7 +44,7 @@
                 <p class="hero_header"">Online Currency Exchange Login</p>
                     <p class="header_text"">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             </div>
-            <div>
+            <div class="hero_buttons">
                 <button class="btn_styling">Download the project file</button>
                 <button class="btn_styling"><a href="project4.html">View the project page</a></button>
             </div>
@@ -60,11 +60,7 @@
     </section>
 
     <section id="project1_section">
-        <div class="project1_container">
-            
-        </div>
-
-
+        <img src="images/project4_snip.png" alt="project 4 screenshot" class="screenshot">
     </section>
 
     <footer>
