--- a/project_page5.html
+++ b/project_page5.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
@@ -41,8 +41,8 @@
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <p class="hero_header"">Summer Basketball League Login</p>
-                    <p class="header_text"">A simple and clean login page for a summer basketball league.</p>
+                <p class="hero_header"">Delivery Service - Option 7</p>
+                    <p class=" header_text"">A funky and retro delivery service. Built using HTML, CSS, and Bootstrap.</p>
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file</button>
@@ -60,41 +60,22 @@
     </section>
 
     <section id="project1_section">
-        <div class="project1_container">
-            <div class="project_sideimg"></div>
-            <div class="project_login">
-                <h2>Login to the Summer League!</h2>
-
-                <div class="project_form">
-                    <input type="email" placeholder="Email" class="credentials">
-
-                    <input type="password" placeholder="Password" class="credentials" id="passwrd">
-
-                    <input type="submit" value="Enter" id="submit">
-                </div>
-                <div class="project_help">
-                    <a href="">New User? Create an account.</a>
-                    <a href="">Forgot password?</a>
-                </div>
-            </div>
-        </div>
-
-
+        <img src="images/project5_snip.png" alt="option 7 screenshot" class="screenshot">
     </section>
 
     <footer>
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="images/email_icon.png" alt=""></div>
+                    <div><img src="images/email_icon.png" alt="email icon"></div>
                     <p class="">slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="images/phone_icon.png" alt=""></div>
+                    <div><img src="images/phone_icon.png" alt="phone icon"></div>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="images/linkedin_icon.png" alt=""></div>
+                    <div><img src="images/linkedin_icon.png" alt="linkedin icon"></div>
                     <p>www.linkedin.com/in/<br>simcha-lapp-0b4081106</p>
                 </div>
             </div>
@@ -105,9 +86,9 @@
         </div>
     </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
