--- a/project_page1.html
+++ b/project_page1.html
@@ -16,14 +16,16 @@
 
 <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
-        <div class="container px-5">
-            <a class="navbar-brand fs-4 p-0" href="index.html">Simcha Lapp</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        <div class="container">
+            <img src="images/monogram4.png" alt="" height="45px" class="ms-5">
+            <a class="navbar-brand fs-4 ms-3 " href="index.html">Simcha Lapp</a>
+    
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="px-3 navbar-collapse text-center" id="navbarNav">
-                <ul class="navbar-nav gap-2">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav gap-2 ms-3 text-center">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     </li>
@@ -37,6 +39,7 @@
             </div>
         </div>
     </nav>
+
 
     <section id="hero_section" class="project_text">
         <div class="hero_box">
@@ -106,8 +109,8 @@
     </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+crossorigin="anonymous"></script>
 </body>
 
 </html>
