--- a/project_page2.html
+++ b/project_page2.html
@@ -17,14 +17,16 @@
 <body>
     <header id="header_section">
         <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
-            <div class="container px-5">
-                <a class="navbar-brand fs-4 p-0" href="index.html">Simcha Lapp</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            <div class="container">
+                <img src="images/monogram4.png" alt="" height="45px" class="ms-5">
+                <a class="navbar-brand fs-4 ms-3 " href="index.html">Simcha Lapp</a>
+        
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav gap-2">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav gap-2 ms-3 text-center">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#home">Home</a>
                         </li>
