--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <body id="home">
     <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
         <div class="container">
-            <a class="navbar-brand fs-5 ms-3 " href="index.html">
-            <img src="images/monogram6.png" alt="Logo" class="ms-5 monogram">
-            Simcha Lapp
+            <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
+                <img src="images/monogram6.png" alt="Logo" class="ms-5 monogram">
+                Simcha Lapp
             </a>
-            
+
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
             </div>
         </div>
     </nav>
-    
+
     <section id="hero_section">
         <div class="hero_box">
             <div class="hero_img">
@@ -197,8 +197,9 @@
         </div>
     </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
