--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="container">
             <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
                 <img src="images/monogram6.png" alt="Logo" class="ms-5 monogram">
-                <span class="d-block d-sm-none">Simcha Lapp</span>
-                <span class="d-block d-md-none">SL</span>
+                <span class="d-none d-md-block">Simcha Lapp</span>
+                <span class="d-sm-block d-md-none">SL</span>
             </a>
 
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
