--- a/project_page5.html
+++ b/project_page5.html
@@ -60,8 +60,9 @@
         </div>
     </section>
 
-    <section id="project1_section">
-        <img src="images/project5_snip.png" alt="option 7 screenshot" class="screenshot">
+    <section id="project_section">
+        <img src="images/project5_snip.png" alt="option 7 screenshot" class="screenshot d-md-block d-none">
+        <img src="images/project5_snip_mobile.png" alt="" class="screenshot_mobile d-sm-block d-md-none">
     </section>
 
     <footer>
