--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
         <div class="container">
             <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
-                <img src="images/monogram6.png" alt="Logo" class="ms-5 monogram">
-                <span class="d-none d-md-block">Simcha Lapp</span>
-                <span class="d-sm-block d-md-none">SL</span>
+                <img src="images/logo1.png" alt="Logo" class="ms-5 monogram">
+                Simcha Lapp
             </a>
 
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
