fixes and project 6

--- a/project_page1.html
+++ b/project_page1.html
@@ -11,21 +11,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="project1_style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
         <div class="container">
-            <img src="images/monogram4.png" alt="" height="45px" class="ms-5">
-            <a class="navbar-brand fs-4 ms-3 " href="index.html">Simcha Lapp</a>
+            <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
+                <img src="images/logo1.png" alt="Logo" class="ms-5 monogram">
+                Simcha Lapp
+            </a>
     
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav gap-2 ms-3 text-center">
+                <ul class="navbar-nav gap-2 ms-auto text-center">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#home">Home</a>
                     </li>
@@ -63,26 +64,8 @@
     </section>
 
     <section id="project1_section">
-        <div class="project1_container">
-            <div class="project_sideimg"></div>
-            <div class="project_login">
-                <h2>Login to the Summer League!</h2>
-
-                <div class="project_form">
-                    <input type="email" placeholder="Email" class="credentials">
-
-                    <input type="password" placeholder="Password" class="credentials" id="passwrd">
-
-                    <input type="submit" value="Enter" id="submit">
-                </div>
-                <div class="project_help">
-                    <a href="">New User? Create an account.</a>
-                    <a href="">Forgot password?</a>
-                </div>
-            </div>
-        </div>
-
-
+        <img src="images/project1_snip.png" alt="project 1 screenshot" class="screenshot d-none d-md-block ">
+        <img src="images/project1_snip_mobile.png" alt="project 1 screenshot " class="screenshot d-md-none d-sm-block ">
     </section>
 
     <footer>
