--- a/project_page6.html
+++ b/project_page6.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="project1_style.css">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
                 <img src="images/logo1.png" alt="Logo" class="ms-5 monogram">
                 Simcha Lapp
             </a>
-    
+
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,12 +45,13 @@
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
-                <p class="hero_header"">Online Currency Exchange Login</p>
-                    <p class=" header_text"">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="hero_header"">Travel Company</p>
+                    <p class=" header_text"">A stylish and eye-catching feedback form. Built using HTML and CSS.
+                </p>
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file</button>
-                <button class="btn_styling"><a href="project4.html">View the project page</a></button>
+                <button class="btn_styling"><a href="project6.html">View the project page</a></button>
             </div>
         </div>
     </section>
@@ -58,28 +60,27 @@
         <div class="icon_container" class="pp_icon_container">
             <div class="coding_icons"><img src="images/img-HTML.png" alt=""></div>
             <div class="coding_icons"><img src="images/img-CSS.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-Bootstrap.png" alt=""></div>
         </div>
     </section>
 
     <section id="project_section">
-        <img src="images/project4_snip.png" alt="project 4 screenshot" class="screenshot d-md-block d-none">
-        <img src="images/project4_snip_mobile.png" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="images/project6_snip.png" alt="option 7 screenshot" class="screenshot d-md-block d-none">
+        <img src="images/project5_snip_mobile.png" alt="" class="screenshot_mobile d-sm-block d-md-none">
     </section>
 
     <footer>
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="images/email_icon.png" alt=""></div>
+                    <div><img src="images/email_icon.png" alt="email icon"></div>
                     <p class="">slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="images/phone_icon.png" alt=""></div>
+                    <div><img src="images/phone_icon.png" alt="phone icon"></div>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="images/linkedin_icon.png" alt=""></div>
+                    <div><img src="images/linkedin_icon.png" alt="linkedin icon"></div>
                     <p>www.linkedin.com/in/<br>simcha-lapp-0b4081106</p>
                 </div>
             </div>
