--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
 
             <div class="project_card" id="project_card5">
-                <div class="project_card_img"><img src="images/box_icon.png" alt="" height="50px"></div>
+                <div class="project_card_img"><img src="images/card_project5.png" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Option 7</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -146,7 +146,7 @@
                 <div class="project_card_text">
                     <h3 class="project_card_title">Project 6</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <button class="btn_styling"><a href="project3/project_page3.html">Project Page</a></button>
+                    <button class="btn_styling"><a href="project_page6.html">Project Page</a></button>
                 </div>
             </div>
         </div>
