--- a/project3.html
+++ b/project3.html
@@ -9,14 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="project3_style.css">
+    <link rel="stylesheet" href="project3_styles.css">
 </head>
 
 <body id="project3_body">
     <section>
-        <div>
-            <button class="back_btn"><a href="project_page3.html">Go Back to Project Page</a></button>
-        </div>
         <div class="main_container">
             <div class="grid">
                 <div id="welcome">
