--- a/project_page2.html
+++ b/project_page2.html
@@ -18,15 +18,17 @@
     <header id="header_section">
         <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
             <div class="container">
-                <img src="images/monogram4.png" alt="" height="45px" class="ms-5">
-                <a class="navbar-brand fs-4 ms-3 " href="index.html">Simcha Lapp</a>
+                <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
+                    <img src="images/logo1.png" alt="Logo" class="ms-5 monogram">
+                    Simcha Lapp
+                </a>
         
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav gap-2 ms-3 text-center">
+                    <ul class="navbar-nav gap-2 ms-auto text-center">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#home">Home</a>
                         </li>
