--- a/project_page3.html
+++ b/project_page3.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="projectPages_style.css">
-    <link rel="stylesheet" href="project3_style.css">
+    <link rel="stylesheet" href="project3_styles.css">
 
 </head>
 
@@ -21,15 +21,18 @@
     <header id="header_section">
         <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
             <div class="container">
-                <img src="images/monogram4.png" alt="" height="45px" class="ms-5">
-                <a class="navbar-brand fs-4 ms-3 " href="index.html">Simcha Lapp</a>
-        
-                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
+                    <img src="images/logo1.png" alt="Logo" class="ms-5 monogram">
+                    Simcha Lapp
+                </a>
+
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav gap-2 ms-3 text-center">
+                    <ul class="navbar-nav gap-2 ms-auto text-center">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#home">Home</a>
                         </li>
@@ -67,7 +70,7 @@
     </section>
 
     <section class="project_section"">
-        <div class=" green_bg main_container">
+        <div class=" green_bg main_container_project">
         <div class="grid">
             <div id="welcome">
                 <div id="text">
@@ -103,7 +106,7 @@
                 </div>
                 <div class="footer_items">
                     <div><img src="images/linkedin_icon.png" alt=""></div>
-                    <p>www.linkedin.com/in/simcha-lapp-0b4081106</p>
+                    <p>www.linkedin.com/in/<br>simcha-lapp-0b4081106</p>
                 </div>
             </div>
         </div>
@@ -113,9 +116,9 @@
         </div>
     </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
