switched project 2 to new

--- a/index.html
+++ b/index.html
@@ -15,33 +15,36 @@
         rel="stylesheet">
 </head>
 
-<body id="home">
-    <nav class="nav_blur navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-50">
-        <div class="container ">
-            <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
-                <img src="images/logo1.png" alt="Logo" class="ms-5 monogram">
-                Simcha Lapp
-            </a>
-
-            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav gap-2 ms-auto text-center">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#my_projects">My Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact_section">Contact</a>
-                    </li>
-                </ul>
+<body id="home" >
+    <header class="nav_container sticky-top">
+        <nav class="nav_blur navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-50">
+            <div class="container">
+                <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
+                    <img src="images/logo1.png" alt="Logo" class="ms-5 monogram">
+                    Simcha Lapp
+                </a>
+        
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav gap-2 ms-auto text-center">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#my_projects">My Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact_section">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
+    
 
     <section id="hero_section">
         <div class="hero_box">
@@ -107,13 +110,13 @@
                 <div class="project_card_img"><img src="images/coding_background.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Coding Course Sign Up</h3>
-                    <p>A sign up page for a new and exciting coding bootcamp. Built with HTML and CSS.</p>
+                    <p>A sign up for a coding course with a bright and abstract design. Built with HTML, CSS, and SASS.</p>
                     <button class="btn_styling"><a href="project_page2.html">Project Page</a></button>
                 </div>
             </div>
 
             <div class="project_card" id="project_card3">
-                <div class="project_card_img cardimg3"></div>
+                <div class="project_card_img"><img src="images/tiger.jpg" alt="tiger" class="cardimg"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Zoo Newsletter</h3>
                     <p>An interesting and outdoorsy newsletter sign up for a zoo. Built with HTML and CSS.</p>
@@ -122,7 +125,7 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img cardimg4"><img src="images/money1.jpg" alt=""></div>
+                <div class="project_card_img cardimg"><img src="images/money1.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Currency Exchange</h3>
                     <p>Modern and clean sign in for an online currrency exchange. Built with HTML, CSS, and Bootstrap.
@@ -131,8 +134,8 @@
                 </div>
             </div>
 
-            <div class="project_card" id="project_card5">
-                <div class="project_card_img"><img src="images/card_project5.png" alt=""></div>
+            <div class="project_card" >
+                <div class="project_card_img"><img src="images/package.jpg" alt="" class="cardimg"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Option 7</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
@@ -142,7 +145,7 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="images/s_logo.jpg" alt=""></div>
+                <div class="project_card_img"><img src="images/project6_images/Rectangle 506-1.png" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Project 6</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
