--- a/project_page2.html
+++ b/project_page2.html
@@ -16,39 +16,40 @@
 
 <body>
     <header id="header_section">
-        <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
-            <div class="container">
-                <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
-                    <img src="images/logo1.png" alt="Logo" class="ms-5 monogram">
-                    Simcha Lapp
-                </a>
+        <header class="nav_container sticky-top">
+            <nav class="nav_blur navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-50">
+                <div class="container">
+                    <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
+                        <img src="images/logo1.png" alt="Logo" class="ms-5 monogram">
+                        Simcha Lapp
+                    </a>
         
-                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav gap-2 ms-auto text-center">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#home">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#my_projects">My Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact_section">Contact</a>
-                        </li>
-                    </ul>
+                    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav gap-2 ms-auto text-center">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#my_projects">My Projects</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact_section">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
     </header>
 
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
                 <p class="hero_header"">Coding Course Sign Up</p>
-                    <p class=" header_text"">A sign up for a coding course with a tech feel.</p>
+                    <p class=" header_text"">A sign up for a coding course with a bright and abstract design. Built with HTML, CSS, and SASS.</p>
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file<button>
@@ -59,15 +60,16 @@
 
     <section id="icon_section">
         <div class="icon_container" class="pp_icon_container">
-            <div class="coding_icons"><img src="images/img-HTML.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-CSS.png"
-            <div class="coding_icons"><img src="images/img-Bootstrap.png" alt=""></div>
+            <div class="coding_icons"><img src="images/img-HTML.png" alt="html icon"></div>
+            <div class="coding_icons"><img src="images/img-CSS.png" alt="css icon"></div>
+            <div class="coding_icons"><img src="images/img-SASS.png" alt="css icon"></div>
         </div>
     </section>
 
 
-    <section id="project1_section">
-        <img src="images/project2_snip.png" alt="project 2 screenshot" class="screenshot">
+    <section id="project_section">
+        <img src="images/project2_snip.png" alt="project 2 screenshot" class="screenshot d-none d-md-block">
+        <img src="images/project2_snip_mobile.png" alt="project 2 screenshot" class="screenshot_mobile d-sm-block d-md-none">
     </section>
     
 
