--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="project_card_text">
                     <h3 class="project_card_title">Coding Course Sign Up</h3>
                     <p>A sign up for a coding course with a bright and abstract design. Built with HTML, CSS, and SASS.</p>
-                    <button class="btn_styling"><a href="project_page2.html">Project Page</a></button>
+                    <button class="btn_styling"><a href="project-page2.html">Project Page</a></button>
                 </div>
             </div>
 
