--- a/project-page2.html
+++ b/project-page2.html
@@ -53,7 +53,7 @@
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file<button>
-                <button class="btn_styling"><a href="/project2_sass/project2.html">View the project page</a></button>
+                <button class="btn_styling"><a href="/project2-sass/project2.html">View the project page</a></button>
             </div>
         </div>
     </section>
