modified folder structure

--- a/projects/Project 2/index.html
+++ b/projects/Project 2/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="./project2-styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 
 <body>
     <div class="container">
         <div class="upper-bg">
-            <img src="../images/Path 15.png" alt="pink background">
+            <img src="./images/pink-bg.png" alt="pink background">
         </div>
   
         <div class="form-container">
