--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
     <title>Simcha Lapp Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&family=Vast+Shadow&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body id="home" >
     <header class="nav_container sticky-top">
-        <nav class="nav_blur navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-50">
+        <nav class="nav_blur navbar navbar-expand-lg sticky-top bg-body-tertiary josefin-sans-bold bg-opacity-50">
             <div class="container">
                 <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
-                    <img src="images/logo1.png" alt="Logo" class="ms-5 monogram">
+                    <img src="./images/logo1.png" alt="Logo" class="ms-5 monogram">
                     Simcha Lapp
                 </a>
         
@@ -49,12 +47,12 @@
     <section id="hero_section">
         <div class="hero_box">
             <div class="hero_img">
-                <img src="images/hi.jpg" alt="">
+                <img src="./images/hi.jpg" alt="">
             </div>
 
             <div class="hero_text">
-                <p class="hero_header vast-shadow-regular">Welcome To My Portfolio</p>
-                <p class="header_text vast-shadow-regular">Here you will find information about me, past projects I have
+                <p class="hero_header josefin-sans-bold">Welcome To My Portfolio</p>
+                <p class="header_text josefin-sans-bold">Here you will find information about me, past projects I have
                     worked on,
                     and be able to reach out and contact me in case you want to work together. Looking foward to hearing
                     from you!</p>
@@ -64,92 +62,92 @@
 
     <section id="icon_section">
         <div class="icon_container">
-            <div class="coding_icons"><img src="images/img-HTML.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-CSS.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-Bootstrap.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-SASS.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-JS.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-NodeJS.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-React.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-API.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-ES6.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-TypeScript.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-OOP.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-HTML.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-CSS.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-Bootstrap.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-SASS.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-JS.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-NodeJS.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-React.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-API.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-ES6.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-TypeScript.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-OOP.png" alt=""></div>
         </div>
     </section>
 
     <section id="aboutMe_section">
         <div class="aboutMe_box">
             <div class="aboutMe_text">
-                <h2>About Me</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur aut repudiandae explicabo autem
+                <h2 class="josefin-sans-bold">About Me</h2>
+                <p class="josefin-sans-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur aut repudiandae explicabo autem
                     ipsam est delectus. Voluptas, repudiandae a! Labore delectus nulla aperiam natus dolor maiores modi
                     sed temporibus, ab laboriosam. Quos cum, reprehenderit similique perferendis sint, alias eius
                     temporibus saepe mollitia vero adipisci nisi impedit, odio pariatur. Neque, amet!</p>
                 <button class="btn_styling"><a href="Resume.pdf" download="Simcha Lapp Resume">Download my
                         resume</a></button>
             </div>
-            <img src="images/profile pic.jpg" alt="" class="aboutMe_img">
+            <img src="./images/profile pic.jpg" alt="" class="aboutMe_img">
         </div>
     </section>
 
     <section id="my_projects" class="project_section">
-        <h2 class="section_header">My Projects</h2>
+        <h2 class="section_header josefin-sans-bold">My Projects</h2>
         <div class="project_card_area">
             <div class="project_card">
-                <div class="project_card_img"><img src="images/basketball.jpg" alt=""></div>
+                <div class="project_card_img"><img src="./images/basketball.jpg" alt=""></div>
 
                 <div class="project_card_text">
-                    <h3 class="project_card_title">Basketball League Login Page</h3>
-                    <p> A youthful and fun login page for a summer basketball league. Built with HTML and CSS.</p>
-                    <button class="btn_styling"><a href="project_page1.html">Project Page</a></button>
+                    <h3 class="project_card_title josefin-sans-bold">Basketball League Login Page</h3>
+                    <p class="josefin-sans-light"> A youthful and fun login page for a summer basketball league. Built with HTML and CSS.</p>
+                    <button class="btn_styling"><a href="./project_page1.html">Project Page</a></button>
                 </div>
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="images/coding_background.jpg" alt=""></div>
+                <div class="project_card_img"><img src="./images/coding_background.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Coding Course Sign Up</h3>
                     <p>A sign up for a coding course with a bright and abstract design. Built with HTML, CSS, and SASS.</p>
-                    <button class="btn_styling"><a href="project-page2.html">Project Page</a></button>
+                    <button class="btn_styling"><a href="./project-page2.html">Project Page</a></button>
                 </div>
             </div>
 
             <div class="project_card" id="project_card3">
-                <div class="project_card_img"><img src="images/tiger.jpg" alt="tiger" class="cardimg"></div>
+                <div class="project_card_img"><img src="./images/tiger.jpg" alt="tiger" class="cardimg"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Zoo Newsletter</h3>
                     <p>An interesting and outdoorsy newsletter sign up for a zoo. Built with HTML and CSS.</p>
-                    <button class="btn_styling"><a href="project_page3.html">Project Page</a></button>
+                    <button class="btn_styling"><a href="./project_page3.html">Project Page</a></button>
                 </div>
             </div>
 
             <div class="project_card">
-                <div class="project_card_img cardimg"><img src="images/money1.jpg" alt=""></div>
+                <div class="project_card_img cardimg"><img src="./images/money1.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Currency Exchange</h3>
                     <p>Modern and clean sign in for an online currrency exchange. Built with HTML, CSS, and Bootstrap.
                     </p>
-                    <button class="btn_styling"><a href="project_page4.html">Project Page</a></button>
+                    <button class="btn_styling"><a href="./project_page4.html">Project Page</a></button>
                 </div>
             </div>
 
             <div class="project_card" >
-                <div class="project_card_img"><img src="images/package.jpg" alt="" class="cardimg"></div>
+                <div class="project_card_img"><img src="./images/package.jpg" alt="" class="cardimg"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Option 7</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                         <p />
-                        <button class="btn_styling"><a href="project_page5.html">Project Page</a></button>
+                        <button class="btn_styling"><a href="./project_page5.html">Project Page</a></button>
                 </div>
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="images/project6_images/Rectangle 506-1.png" alt=""></div>
+                <div class="project_card_img"><img src="./images/project6_images/Rectangle 506-1.png" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title">Project 6</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <button class="btn_styling"><a href="project_page6.html">Project Page</a></button>
+                    <button class="btn_styling"><a href="./project_page6.html">Project Page</a></button>
                 </div>
             </div>
         </div>
@@ -181,15 +179,15 @@
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="images/email_icon.png" alt=""></div>
+                    <div><img src="./images/email_icon.png" alt=""></div>
                     <p>slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="images/phone_icon.png" alt=""></div>
+                    <div><img src="./images/phone_icon.png" alt=""></div>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items linked_in">
-                    <div><img src="images/linkedin_icon.png" alt=""></div>
+                    <div><img src="./images/linkedin_icon.png" alt=""></div>
                     <p>www.linkedin.com/in/<br>simcha-lapp-0b4081106</p>
                 </div>
             </div>
