--- a/project-page2.html
+++ b/project-page2.html
@@ -9,9 +9,8 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="project1_style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
@@ -19,8 +18,8 @@
         <header class="nav_container sticky-top">
             <nav class="nav_blur navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-50">
                 <div class="container">
-                    <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
-                        <img src="images/logo1.png" alt="Logo" class="ms-5 monogram">
+                    <a class="navbar-brand fs-5 ms-md-3 " href="./index.html">
+                        <img src="./images/logo1.png" alt="Logo" class="ms-5 monogram">
                         Simcha Lapp
                     </a>
         
@@ -31,13 +30,13 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav gap-2 ms-auto text-center">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                                <a class="nav-link active" aria-current="page" href=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#my_projects">My Projects</a>
+                                <a class="nav-link" href=""></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact_section">Contact</a>
+                                <a class="nav-link" href=""></a>
                             </li>
                         </ul>
                     </div>
@@ -53,23 +52,23 @@
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file<button>
-                <button class="btn_styling"><a href="./project2-sass/project2.html">View the project page</a></button>
+                <button class="btn_styling"><a href="./projects/Project 2/index.html">View the project page</a></button>
             </div>
         </div>
     </section>
 
     <section id="icon_section">
         <div class="icon_container" class="pp_icon_container">
-            <div class="coding_icons"><img src="images/img-HTML.png" alt="html icon"></div>
-            <div class="coding_icons"><img src="images/img-CSS.png" alt="css icon"></div>
-            <div class="coding_icons"><img src="images/img-SASS.png" alt="css icon"></div>
+            <div class="coding_icons"><img src="./images/img-HTML.png" alt="html icon"></div>
+            <div class="coding_icons"><img src="./images/img-CSS.png" alt="css icon"></div>
+            <div class="coding_icons"><img src="./images/img-SASS.png" alt="css icon"></div>
         </div>
     </section>
 
 
     <section id="project_section">
-        <img src="images/project2_snip.png" alt="project 2 screenshot" class="screenshot d-none d-md-block">
-        <img src="images/project2_snip_mobile.png" alt="project 2 screenshot" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="./images/project2_snip.png" alt="project 2 screenshot" class="screenshot d-none d-md-block">
+        <img src="./images/project2_snip_mobile.png" alt="project 2 screenshot" class="screenshot_mobile d-sm-block d-md-none">
     </section>
     
 
@@ -77,15 +76,15 @@
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="images/email_icon.png" alt=""></div>
+                    <div><img src="./images/email_icon.png" alt=""></div>
                     <p>slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="images/phone_icon.png" alt=""></div>
+                    <div><img src="./images/phone_icon.png" alt=""></div>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="images/linkedin_icon.png" alt=""></div>
+                    <div><img src="./images/linkedin_icon.png" alt=""></div>
                     <p>www.linkedin.com/in/simcha-lapp-0b4081106</p>
                 </div>
             </div>
