--- a/project_page3.html
+++ b/project_page3.html
@@ -9,44 +9,40 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Vast+Shadow&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="projectPages_style.css">
-    <link rel="stylesheet" href="project3_styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./projects/Project 3/styles/styles.css">
 
 </head>
 
 <body>
-    <header id="header_section">
-        <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary vast-shadow-regular bg-opacity-75">
-            <div class="container">
-                <a class="navbar-brand fs-5 ms-md-3 " href="index.html">
-                    <img src="images/logo1.png" alt="Logo" class="ms-5 monogram">
-                    Simcha Lapp
-                </a>
+    <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary bg-opacity-75">
+        <div class="container">
+            <a class="navbar-brand fs-5 ms-md-3 " href="./index.html">
+                <img src="./images/logo1.png" alt="Logo" class="ms-5 monogram">
+                Simcha Lapp
+            </a>
 
-                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav gap-2 ms-auto text-center">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#home">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#my_projects">My Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact_section">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav gap-2 ms-auto text-center">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href=""></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href=""></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href=""></a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
 
     <section id="hero_section" class="project_text">
         <div class="hero_box">
@@ -56,16 +52,16 @@
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling">Download the project file</button>
-                <button class="btn_styling"><a href="project3.html">View the project page</a></button>
+                <button class="btn_styling"><a href="./projects/Project 3/index.html">View the project page</a></button>
             </div>
         </div>
     </section>
 
     <section id="icon_section">
         <div class="icon_container" class="pp_icon_container">
-            <div class="coding_icons project_icon"><img src="images/img-HTML.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-CSS.png" alt=""></div>
-            <div class="coding_icons"><img src="images/img-Bootstrap.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-HTML.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-CSS.png" alt=""></div>
+            <div class="coding_icons"><img src="./images/img-Bootstrap.png" alt=""></div>
         </div>
     </section>
 
@@ -97,15 +93,15 @@
         <div class="footer_container">
             <div class="footer_box">
                 <div class="footer_items">
-                    <div><img src="images/email_icon.png" alt=""></div>
+                    <div><img src="./images/email_icon.png" alt=""></div>
                     <p>slapp62@gmail.com</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="images/phone_icon.png" alt=""></div>
+                    <div><img src="./images/phone_icon.png" alt=""></div>
                     <p>058-434-5797</p>
                 </div>
                 <div class="footer_items">
-                    <div><img src="images/linkedin_icon.png" alt=""></div>
+                    <div><img src="./images/linkedin_icon.png" alt=""></div>
                     <p>www.linkedin.com/in/<br>simcha-lapp-0b4081106</p>
                 </div>
             </div>
