--- a/projects/Project 1/index.html
+++ b/projects/Project 1/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="project1_style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
 
     <div class="login_container">
-        <div class="side_image"><img src="/images/basketball.jpg" alt=""></div>
+        <div class="side_image"><img src="./images/basketball.jpg" alt=""></div>
         <div class="login">
             <h2>Login to the Summer League!</h2>
 
