--- a/projects/Project 3/index.html
+++ b/projects/Project 3/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="project3_styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
+
 </head>
 
 <body id="project3_body">
