--- a/projects/Project 4/index.html
+++ b/projects/Project 4/index.html
@@ -7,7 +7,7 @@
     <title>Project 4</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="project4_styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 </head>
 
@@ -17,13 +17,13 @@
             <div id="carouselExampleAutoplaying" class="w-100 carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/money2.jpg" class="d-block w-100" alt="polish money">
+                        <img src="./images/zloty.jpg" class="d-block w-100" alt="polish money">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/money1.jpg" class="d-block w-100" alt="coins">
+                        <img src="./images/coins.jpg" class="d-block w-100" alt="coins">
                     </div>
                     <div class="carousel-item money3">
-                        <img src="images/money3.jpg" class="d-block w-100" alt="US dollars">
+                        <img src="./images/dollars.jpg" class="d-block w-100" alt="US dollars">
                     </div>
                 </div>
             </div>
@@ -32,7 +32,7 @@
         <form class="col-md-5 ">
             <div class="d-flex flex-column border border-success-subtle p-2 rounded-4">
                 <h2 class="text-center">The Online Exchange</h2>
-                <img src="images/money_exchange.png" alt="" class="mx-auto py-3">
+                <img src="./images/money_exchange.png" alt="" class="mx-auto py-3">
                 <h3>Sign in to your account</h3>
                 <div class="mb-3 w-75">
                     <label for="exampleInputEmail1" class="form-label d-none d-md-block">Email address</label>
