--- a/projects/Project 5/index.html
+++ b/projects/Project 5/index.html
@@ -7,14 +7,14 @@
     <title>Project 5</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="project5_styles.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
     <div class="container-fluid">
         <div class="row header_box gap-md-5 position-relative d-sm-flex flex-column-reverse p-sm-3">
             <div class="d-flex align-items-center justify-content-center whatsapp_icon position-absolute">
-                <img src="images/whatsapp_icon.png" height="50px" alt="whatsapp icon">
+                <img src="./images/whatsapp-icon.png" height="50px" alt="whatsapp icon">
             </div>
             <div class="col-md-7 d-flex flex-column align-items-end text-end my-auto fw-bold">
                 <h2 class="fw-bolder">לחשוב מחוץ ל</h2>
@@ -24,7 +24,7 @@
                     סיט אמט, קוואזי במר מודוף.</p>
             </div>
             <div class="col-md-3 d-flex mt-5 my-md-auto pt-sm-5 justify-content-md-start justify-content-end">
-                <img src="images/box_icon.png" alt="box" class="box_icon">
+                <img src="./images/box_icon.png" alt="box" class="box_icon">
             </div>
         </div>
 
@@ -32,7 +32,7 @@
             <div class="col-md-3 col-sm-12">
                 <div
                     class="card d-flex flex-column align-items-center justify-content-center gap-3 p-4 bg-dark bg-opacity-10">
-                    <img src="images/box_icon.png" alt="" height="40px">
+                    <img src="./images/box_icon.png" alt="" height="40px">
                     <h3>כותרת אזור</h3>
                     <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.</p>
                 </div>
@@ -41,7 +41,7 @@
             <div class="col-md-3 col-sm-12">
                 <div
                     class="card d-flex flex-column align-items-center justify-content-center gap-3 p-4 bg-dark bg-opacity-10 mb-sm-3">
-                    <img src="images/box_icon.png" alt="" height="40px">
+                    <img src="./images/box_icon.png" alt="" height="40px">
                     <h3>כותרת אזור</h3>
                     <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.</p>
                 </div>
@@ -50,7 +50,7 @@
             <div class="col-md-3 col-sm-12">
                 <div
                     class="card d-flex flex-column align-items-center justify-content-center gap-3 p-4 bg-dark bg-opacity-10 mb-sm-3">
-                    <img src="images/box_icon.png" alt="" height="40px">
+                    <img src="./images/box_icon.png" alt="" height="40px">
                     <h3>כותרת אזור</h3>
                     <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.</p>
                 </div>
@@ -59,7 +59,7 @@
             <div class="col-md-3 col-sm-12">
                 <div
                     class="card d-flex flex-column align-items-center justify-content-center gap-3 p-4 bg-dark bg-opacity-10 mb-sm-3">
-                    <img src="images/box_icon.png" alt="" height="40px">
+                    <img src="./images/box_icon.png" alt="" height="40px">
                     <h3>כותרת אזור</h3>
                     <p>לקבלת ייעוץ חינם, מוזמנים להשאיר פרטים ומומחה יחזור אליכם עם מענה.</p>
                 </div>
@@ -96,19 +96,19 @@
         <div class="row">
             <div class="col social_box d-flex justify-content-center align-items-center gap-4">
                 <div class="icons d-flex align-items-center justify-content-center">
-                    <a href="https://www.facebook.com" target="_blank"><img src="images/fb2_icon.png"
+                    <a href="https://www.facebook.com" target="_blank"><img src="./images/fb2_icon.png"
                             alt="facebook icon" height="40px"></a>
                 </div>
                 <div class="icons d-flex align-items-center justify-content-center">
-                    <a href="https://www.instagram.com" target="_blank"><img src="images/insta_icon.png"
+                    <a href="https://www.instagram.com" target="_blank"><img src="./images/insta_icon.png"
                             alt="instagram icon" height="40px"></a>
                 </div>
                 <div class="icons d-flex align-items-center justify-content-center">
-                    <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin2_icon.png"
+                    <a href="https://www.linkedin.com" target="_blank"><img src="./images/linkedin2_icon.png"
                             alt="linkedin icon" height="50px"></a>
                 </div>
                 <div class="icons d-flex align-items-center justify-content-center">
-                    <a href=""><img src="images/phone_icon.png" alt="phone icon" height="40px"></a>
+                    <a href=""><img src="./images/phone_icon.png" alt="phone icon" height="40px"></a>
                 </div>
             </div>
             <div class="bottom_border"></div>
