--- a/projects/Project 6/index.html
+++ b/projects/Project 6/index.html
@@ -7,23 +7,23 @@
     <title>Project 6</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="project6_styles.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
     <div class="grid-container">
-        <div class="grid-item" id="img1"></div>
-        <div class="grid-item" id="img2"></div>
+        <div class="grid-item"><img src="./images/Rectangle 515.png" alt="trees"></div>
+        <div class="grid-item" id="img2"><img src="./images/Rectangle 514.png" alt="two women"></div>
         <div class="grid-item" id="banner">
             <h2>לגלות את העולם</h2>
             <p>לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא מקום” בעת עריכ.</p>
         </div>
-        <div class="grid-item" id="img3"></div>
-        <div class="grid-item" id="img4"></div>
-        <div class="grid-item" id="img5"></div>
-        <div class="grid-item" id="img6"></div>
-        <div class="grid-item" id="img7"></div>
-        <div class="grid-item" id="img8"></div>
+        <div class="grid-item"><img src="./images/Rectangle 516.png" alt="beach"></div>
+        <div class="grid-item"><img src="./images/Rectangle 506-5.png" alt="cow"></div>
+        <div class="grid-item"><img src="./images/Rectangle 506-2.png" alt="mountains"></div>
+        <div class="grid-item"><img src="./images/Rectangle 506-3.png" alt="beach"></div>
+        <div class="grid-item"><img src="./images/Rectangle 506-4.png" alt="sunset"></div>
+        <div class="grid-item"><img src="./images/Rectangle 506-1.png" alt="forest"></div>
         <div class="grid-item" id="form">
             <h3>ספרו לנו על החוויה שלכם</h3>
             <p>לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא מקום” בעת עריכ.</p>
@@ -42,20 +42,13 @@
             </div>
 
         </div>
-        <div class="grid-item" id="img9"></div>
-        <div class="grid-item" id="img10"></div>
-        <div class="grid-item" id="img11"></div>
-        <div class="grid-item" id="img12"></div>
-        <div class="grid-item" id="img13"></div>
-        <div class="grid-item" id="img14"></div>
+        <div class="grid-item"><img src="./images/Rectangle 506-8.png" alt="monkey"></div>
+        <div class="grid-item"><img src="./images/Rectangle 506-7.png" alt="homeless man"></div>
+        <div class="grid-item"><img src="./images/Rectangle 506-9.png" alt="grass"></div>
+        <div class="grid-item"><img src="./images/Rectangle 506-6.png" alt="train"></div>
+        <div class="grid-item"><img src="./images/Rectangle 513.png" alt="temple"></div>
+        <div class="grid-item"><img src="./images/Rectangle 506.png" alt="boat"></div>
     </div>
-
-
-
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
